-Fixed zombie babys from spawning -Added a check for mandatory values and a message to select -Fixed mobs randomly spawning with crazy health